[package]
name = "pulsearc-db"
version = "0.1.0"
edition = "2021"
license = "(MIT OR Apache-2.0) AND BSD-3-Clause"
description = "An embedded, ordered key-value store for Rust."
repository = "https://github.com/pulsearc-ai/pulsearc-db"
homepage = "https://github.com/pulsearc-ai/pulsearc-db"
documentation = "https://docs.rs/pulsearc-db"
readme = "README.md"
keywords = ["key-value", "database", "embedded", "lsm", "storage"]
categories = ["database-implementations", "data-structures"]
# Allowlist: only the crate's own source ships in the package. `include`
# overrides `exclude`, so anything else in the working tree stays out of
# the tarball. Consumers build the crate with nothing more than what is
# listed here.
include = [
    "/src/**/*.rs",
    "/Cargo.toml",
    "/README.md",
    "/LICENSE-APACHE",
    "/LICENSE-MIT",
    "/LICENSE-BSD-3-CLAUSE",
]

[features]
default = []
# Built-in Snappy block compressor. Enable via:
#     pulsearc-db = { ..., features = ["snappy"] }
# Pulls in the pure-Rust `snap` crate; the default build stays
# dep-light.
snappy = ["dep:snap"]

[dependencies]
snap = { version = "1.1", optional = true }
